--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "porfolio",
   "version": "0.1.0",
   "private": true,
+  "node": "18.x",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
